<resources>
    <string name="app_name">Listanime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Main</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nome_de_usu_rio">Nome de Usuário</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="concluir_cadastro">concluir cadastro</string>
    <string name="dados_da_obra">Dados da Obra</string>
    <string name="campos_obrigat_rios">Campos obrigatórios:</string>
    <string name="t_tulo_do_anime">Título do anime</string>
    <string name="nome_do_est_dio">Nome do estúdio</string>
    <string name="ano_de_exibi_o">Ano de exibição</string>
    <string name="total_de_epis_dios">Total de episódios</string>
    <string name="campos_opcionais">Campos opcionais:</string>
    <string name="status">Status:</string>
    <string name="nome_do_diretor">Nome do diretor</string>
    <string name="descri_o_do_anime">Descrição do anime</string>
    <string name="epis_dios_assistidos">Episódios Assistidos:</string>
    <string name="line">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="nota">Nota:</string>
    <string name="adicionar_aos_favoritos">Adicionar aos favoritos</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="excluir_anime">Excluir Anime</string>
    <string name="novo_nome_de_usu_rio">Novo nome de usuário</string>
    <string name="nova_senha">Nova senha</string>
    <string name="senha_atual">Senha atual</string>
    <string name="e_mail2">E-mail</string>
    <string name="senha2">Senha</string>
    <string name="continuar">continuar</string>
    <string name="digite_sua_anota_o">Digite sua anotação</string>
    <string name="ok">OK</string>
    <string name="remover_anota_o">REMOVER ANOTAÇÃO</string>
    <string name="listanime">LISTANIME</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">cadastrar</string>
    <string name="bem_vindo">Bem-Vindo!</string>
    <string name="t_tulo_do_top">Título do top</string>
    <string name="adicionar">Adicionar</string>
    <string name="salvar2">Salvar</string>
    <string name="cancelar2">Cancelar</string>
    <string name="excluir_top">Excluir Top</string>
    <string name="nome_do_anime">Nome do Anime</string>
    <string name="est_dio">Estúdio</string>
    <string name="editar">EDITAR</string>
    <string name="anota_es">ANOTAÇÕES</string>
    <string name="data">Data</string>
    <string name="anotac_o">Anotacão</string>
    <string name="nome_do_anime2">Nome do Anime</string>
    <string name="est_dio2">Estúdio</string>
    <string name="ano">Ano</string>
    <string name="t_tulo_do_anime2">Título do anime</string>
    <string name="t_tulo_do_top2">Título do top</string>
    <string name="nome_do_usu_rio">Nome do usuário</string>
    <string name="meus_n_meros">Meus números</string>
    <string name="meus_top_s">Meus top\'s</string>
    <string name="pretendo_assistir">Pretendo assistir</string>
    <string name="animes_descartados">Animes descartados</string>
    <string name="configura_es">Configurações</string>
    <string name="sair">Sair</string>

    <string-array name="animeStatus">
        <item>Assistindo</item>
        <item>Concluído</item>
        <item>Pretendo assistir</item>
        <item>Descartado</item>
    </string-array>

</resources>
