<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group
        android:id="@+id/grupo_principal"
        android:checkableBehavior="single">
        <item android:id="@+id/meusNumeros"
            android:icon="@drawable/ic_meus_numeros"
            android:title="@string/meus_n_meros" />

        <item android:id="@+id/tops"
            android:icon="@drawable/ic_top"
            android:title="@string/meus_top_s" />

        <item android:id="@+id/pretendoAssistir"
            android:icon="@drawable/ic_watch_later"
            android:title="@string/pretendo_assistir" />

        <item android:id="@+id/animesDescartados"
            android:icon="@drawable/ic_delete"
            android:title="@string/animes_descartados" />
    </group>

    <group
        android:id="@+id/grupo_conta"
        android:checkableBehavior="single">
        <item android:id="@+id/config"
            android:icon="@drawable/ic_config"
            android:title="@string/configura_es" />

        <item android:id="@+id/sair"
            android:icon="@drawable/ic_sair"
            android:title="@string/sair" />

    </group>

</menu>